@@ -1417,7 +1417,23 @@
     </div>
 
     <div id="universe-map-tab" class="tab-content">
-        <div style="font-size: 1.5em; text-align: center; margin-top: 2em;">Work in progress</div>
+        <div style="display: flex; flex-direction: row; padding: 2em; gap: 2em; min-height: calc(100vh);">
+            <div style="display: flex; flex-direction: column; gap: 1em; min-width: 300px; margin-top: 50vh; transform: translateY(-50%);">
+                <div style="background: #23283a; border-radius: 6px; border: 1px solid #2c3242; padding: 1.2em; box-sizing: border-box;">
+                    <div style="font-size: 1.22em; font-weight: 700; margin-bottom: 1em; color: #f3f6fa; letter-spacing: 0.01em;">Discovered Universe</div>
+                    <div style="display: flex; flex-direction: column; gap: 1em;">
+                        <div>
+                            <label for="systems_api_key" style="display: block; margin-bottom: 0.5em; color: #e6eaf3;">API Key:</label>
+                            <input type="text" id="systems_api_key" style="width: 100%; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242; padding: 0.5em; border-radius: 4px; box-sizing: border-box;">
+                        </div>
+                        <button id="loadSystemsBtn" type="button" style="background: #36405a; color: #e6eaf3; border: 1px solid #2c3242; padding: 0.5em 1em; border-radius: 4px; cursor: pointer; width: 100%;">Load Systems</button>
+                    </div>
+                </div>
+            </div>
+            <div style="position: relative; width: 720px; height: 720px; background: #181c24;">
+                <canvas id="universeMap" style="width: 100%; height: 100%;"></canvas>
+            </div>
+        </div>
     </div>
 
     <!-- Tab bar -->
@@ -1431,7 +1447,7 @@
     <footer>
         <span>Proudly made by anfneub</span>
         <span style="margin-left: 2.5em;" id="lastUpdated"></span>
-        <span style="margin-left: 2.5em;">Space Odyssey Version 1.0.16 2025-05-25</span>
+        <span style="margin-left: 2.5em;">Space Odyssey Version 1.1.4 2025-05-25</span>
         <span style="margin-left: 2.5em; cursor: pointer; color: #4fa3ff; text-decoration: underline;" id="changelogLink">Changelog</span>
     </footer>
 
@@ -1476,8 +1492,8 @@
         if (lastUpdated) {
             const now = new Date();
             const pad = n => n.toString().padStart(2, '0');
-            const dateStr = "2025-05-26";
-            const timeStr = "20:15";
+            const dateStr = "2025-05-27";
+            const timeStr = "09:30";
             lastUpdated.textContent = `Last updated: ${dateStr} ${timeStr}`;
         }
     </script>
@@ -1527,5 +1543,6 @@
     });
     </script>
     <script src="script.js"></script>
+    <script src="universe_map.js"></script>
 </body>
 </html> 
